Restore content of partial/fatah.html
Restored the original content of the file after it was removed.

--- a/partial/fatah.html
+++ b/partial/fatah.html
@@ -43,7 +43,7 @@
 
 <section class="hero-section">
     <div class="hero-media">
-        <div class="placeholder-media">Image ou Vidéo
+        <div class="placeholder-media">
             <img src="image.png" alt="image">
         </div>
     </div>
@@ -72,7 +72,7 @@
             </div>
             <div class="studio-description">
                 <div class="description-box">
-                    <p>Nos développeurs travaillent dans des conditions optimales afin d’accomplir leurs tâches. 🚀</p>
+                    <p>Nos développeurs travaillent dans des conditions optimales afin d’accomplir leurs tâches</p>
                 </div>
             </div>
         </div>
@@ -80,3 +80,4 @@
 </section>
 </body>
 </html>
+
